--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 .DS_Store
 Phoenix Installer/.DS_Store
 Phoenix Installer/Other Resources/.DS_Store
+Phoenix Installer/.DS_Store
+Phoenix Installer/Other Resources/.DS_Store
